css/contact.css
@charset "utf-8";

#contact-map-container {
  display: flex;
  margin-bottom: 0.5rem; /* BS5 mb-2 */
}

#contact-map {
  width: 100%; 
  height: 400px; 
  border: 0; 
  margin: 0 auto;
}

#contact-details-container {
  text-align: center;
}

/* Default styles for XS screens */
.contact-hr {
  width: 100%;
  margin: auto;
  padding-bottom: 1.5rem; /* BS5 pb-4 */
}

.contact-link {
  color: grey;
  font-size: 18px;
  text-decoration: none;
}

.contact-link:hover {
  opacity: 0.9;
  text-decoration: underline;
  text-underline-offset: 0.4rem;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

/* BS5 focus effect */
.contact-link:focus-visible {
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}

#contact-hours-container {
  text-align: center;
  margin-top: 3rem; 
}

/* BS5 focus effect */
#contact-todays-hours:focus-visible {
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}

#contact-todays-hours:hover,
#contact-hours-monday:hover {
  opacity: 0.9;
  cursor: pointer;
  transition: transform 0.3s ease, opacity 0.3s ease;
}

#contact-todays-hours,
#contact-hours-monday {
  position: relative;
  text-align: center;
  display:inline-block;
}

.contact-hours-underline {
  text-decoration: underline; 
  text-underline-offset: 0.4rem;
}

.contact-hours-caret {
  position: relative;
  top: 50%;
  transform: translateY(-50%);
  left: 5px;
}

.contact-day-bold {
  font-weight: bold;
  color: #212529;
}

/* Small screens (>576px) */
@media(min-width: 576px) {
  .contact-link {
    font-size: 1.3rem;
  }
}

/* Large screens (>992px) */
@media (min-width: 992px) {
  .contact-hr {
    width: 50%; /* Reduce HR width for larger screens */
  }
}

